# PROJET_IA

./: pyproject.toml
LIB_Sharon/: README.md
LIB_Sharon/netlists/: rc.cir
LIB_Sharon/src/: main.py
netlists/: rc.cir  rc_template.cir
src/: debug_ngspice.py  main.py
